--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,7 +10,6 @@ on:
       - "**/README.md"
 
 env:
-  IMAGE_TAGS: latest
   IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
@@ -32,7 +31,7 @@ jobs:
           containerfiles: |
             ./Dockerfile
           image: archbox
-          tags: ${{ env.IMAGE_TAGS }}
+          tags: latest ${{ github.sha }}
           oci: true
 
       # Workaround bug where capital letters in your GitHub username make it impossible to push to GHCR.
