[*] get pkgs from gist instead of file

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           containerfiles: |
             ./Dockerfile
+          build-args: |
+            GIST_PAT = ${{ secrets.GIST_PAT }}
           image: archbox
           tags: latest ${{ github.sha }}
           oci: true
