--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,11 +1,12 @@
 name: build-and-push
 
 on:
+  workflow-dispatch:
   pull_request:
     paths-ignore:
       - "**/README.md"
   schedule:
-    - cron: "0 0 * * SUN"
+    - cron: "0 0 * * *"
   push:
     branches:
       - master
