--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,55 +13,50 @@ on:
     paths-ignore:
       - "**/README.md"
 
-env:
-  IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-
 jobs:
-  arch:
-    name: Build and push image
-    runs-on: ubuntu-22.04
+  build-and-push:
+    name: Build and push image to ghcr
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-      id-token: write
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - archbox
+          - fedora
+    env:
+      IMAGE_NAME: ${{ matrix.image }}
+      IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+      FEDORA_IMAGE_MAJOR: 39
+
     steps:
       - uses: actions/checkout@v3
 
-      # Build image using Buildah action
-      - name: Build Image
-        id: build_image
-        uses: redhat-actions/buildah-build@v2
+      - name: Login to registry
+        uses: docker/login-action@v2.2.0
         with:
-          containerfiles: |
-            ./Dockerfile
-          build-args: |
-            GIST_PAT = ${{ secrets.GIST_PAT }}
-          image: archbox
-          tags: latest ${{ github.sha }}
-          oci: true
-
-      # Workaround bug where capital letters in your GitHub username make it impossible to push to GHCR.
-      # https://github.com/macbre/push-to-ghcr/issues/12
-      - name: Lowercase Registry
-        id: registry_case
-        if: github.event_name != 'pull_request'
-        uses: ASzc/change-string-case-action@v5
-        with:
-          string: ${{ env.IMAGE_REGISTRY }}
-
-      # Push the image to GHCR (Image Registry)
-      - name: Push To GHCR
-        uses: redhat-actions/push-to-registry@v2
-        id: push
-        if: github.event_name != 'pull_request'
-        env:
-          REGISTRY_USER: ${{ github.actor }}
-          REGISTRY_PASSWORD: ${{ github.token }}
-        with:
-          image: ${{ steps.build_image.outputs.image }}
-          tags: ${{ steps.build_image.outputs.tags }}
-          registry: ${{ steps.registry_case.outputs.lowercase }}
+          registry: ${{ env.IMAGE_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
-          extra-args: |
-            --disable-content-trust
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4.6.0
+        with:
+          images: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=sha
+          flavor: |
+            latest=true
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4.1.1
+        with:
+          build-args: |
+            FEDORA_IMAGE_MAJOR=${{ env.FEDORA_IMAGE_MAJOR }}
+          file: ./${{ env.IMAGE_NAME }}/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
