--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -3,8 +3,9 @@ ARG FEDORA_IMAGE_MAJOR="${FEDORA_IMAGE_MAJOR:-latest}"
 FROM registry.fedoraproject.org/fedora-toolbox:${FEDORA_IMAGE_MAJOR}
 
 COPY common /tmp/common
+COPY fedora/base_packages /tmp/base_packages
 
-RUN dnf install -y zsh neovim
+RUN dnf install -y $(</tmp/base_packages)
 
 # Symlinks for host access
 RUN /tmp/common/symlinks.sh
