--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,14 +24,14 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - archbox
-          - fedora
-          - ubuntu
+          - { archbox: [latest] }
+          - { fedora: [latest, 39] }
+          - { ubuntu: [latest, 22.04] }
     env:
       IMAGE_NAME: ${{ matrix.image }}
       IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
-      FEDORA_IMAGE_MAJOR: "39"
-      UBUNTU_RELEASE: "22.04"
+      FEDORA_IMAGE_MAJOR: ${{ matrix.image.fedora }}
+      UBUNTU_RELEASE: ${{ matrix.image.ubuntu }}
 
     steps:
       - uses: actions/checkout@v3
@@ -50,8 +50,9 @@ jobs:
           images: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=sha
-          flavor: |
-            latest=true
+            type=raw,value=${{ env.FEDORA_IMAGE_MAJOR }}
+            type=raw,value=${{ env.UBUNTU_RELEASE }}
+            type=raw,value=latest,enalbe=${{ contains('latest', matrix.image) }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4.1.1
