--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,10 +29,10 @@ jobs:
           - ubuntu
         include:
           - release: latest
-          - image: fedora
-            release: 39
-          - image: ubuntu
-            release: 22.04
+          - release: 39
+            image: fedora
+          - release: 22.04
+            image: ubuntu
     env:
       IMAGE_NAME: ${{ matrix.image }}
       IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
