ci: Build latest for all

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,6 +29,7 @@ jobs:
           - ubuntu
         include:
           - release: latest
+            image: [archbox, fedora, ubuntu]
           - release: 39
             image: fedora
           - release: 22.04
