--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,9 +27,9 @@ jobs:
           - archbox
           - fedora
           - ubuntu
+        release:
+          - latest
         include:
-          - release: latest
-            image: [archbox, fedora, ubuntu]
           - release: 39
             image: fedora
           - release: 22.04
