--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,8 @@ jobs:
         include:
           - release: 39
             image: fedora
+          - release: 40
+            image: fedora
           - release: 22.04
             image: ubuntu
     env:
