feat: Go easier on base pkgs

--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -5,8 +5,7 @@ FROM quay.io/fedora/fedora-toolbox:${IMAGE_RELEASE}
 COPY common /tmp/common
 COPY fedora/base_packages /tmp/base_packages
 
-RUN dnf install -y $(</tmp/base_packages) && \
-  dnf builddep -y python3
+RUN dnf install -y $(</tmp/base_packages)
 
 # Symlinks for host access
 RUN /tmp/common/symlinks.sh
