--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -3,12 +3,14 @@ ARG IMAGE_RELEASE="${IMAGE_RELEASE:-latest}"
 FROM quay.io/fedora/fedora-toolbox:${IMAGE_RELEASE}
 
 COPY common /tmp/common
-COPY fedora/base_packages /tmp/base_packages
-
-RUN dnf install -y $(</tmp/base_packages)
 
 # Symlinks for host access
-RUN /tmp/common/symlinks.sh
+RUN /tmp/common/symlinks.sh && \
+	rm -rf /tmp/*
 
-# Remove tmp files
-RUN rm -rf /tmp/*
+# hadolint ignore=DL3041
+RUN dnf update && \
+	dnf install -y clang gcc mold zsh file dnf-plugins-core \
+	&& dnf builddep -y python3 \
+	&& dnf clean all
+
