--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -4,17 +4,18 @@ FROM quay.io/toolbx/ubuntu-toolbox:${IMAGE_RELEASE}
 
 COPY common /tmp/common
 
-RUN export DEBIAN_FRONTEND=noninteractive && \
-  apt-get update && \
-  apt-get remove --yes ubuntu-pro-client && \
-  apt-get upgrade --yes && \
-  apt-get install --yes zsh
+# Symlinks for host access
+RUN /tmp/common/symlinks.sh && \
+	rm -rf /tmp/*
 
 # Enable deb sources
 RUN sed -i "s/# deb-src/deb-src/g" /etc/apt/sources.list
 
-# Symlinks for host access
-RUN /tmp/common/symlinks.sh
+# hadolint ignore=DL3008
+RUN export DEBIAN_FRONTEND=noninteractive && \
+	apt-get update && \
+	apt-get remove --yes ubuntu-pro-client && \
+	apt-get upgrade --yes && \
+	apt-get install --no-install-recommends --yes zsh clang gcc mold file && \
+	rm -rf /var/lib/apt/lists && apt-get clean
 
-# Remove tmp files
-RUN rm -rf /tmp/*
